{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 415,
  "lineage": "c0468691-8a62-ad65-8037-91262719cd6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0201a7528f20bbe92",
            "arn": "arn:aws:ec2:eu-north-1:602664594292:elastic-ip/eipalloc-0201a7528f20bbe92",
            "association_id": "eipassoc-06f040b0d1dea5f98",
            "domain": "vpc",
            "id": "eipalloc-0201a7528f20bbe92",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0ab1ec07feb473b0e",
            "private_dns": "ip-10-0-3-216.eu-north-1.compute.internal",
            "private_ip": "10.0.3.216",
            "public_dns": "ec2-13-63-217-71.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.217.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-nat-eip",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-nat-eip",
              "Project": "cloud-soc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "victim_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0826f7fac3eaaa32a",
            "arn": "arn:aws:ec2:eu-north-1:602664594292:instance/i-05851dc5e18cfb466",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wazuh-instance-profile",
            "id": "i-05851dc5e18cfb466",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06459a7db215f6bc1",
            "private_dns": "ip-10-0-2-12.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00286231bfc9e734e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f258cd47c48b893e",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "victim-server",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "victim-server",
              "Project": "cloud-soc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f3112fb4c4960b10"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.victim_repo",
            "aws_eip.nat",
            "aws_iam_instance_profile.wazuh_instance_profile",
            "aws_iam_role.wazuh_ec2_role",
            "aws_instance.wazuh_server",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table_association.management_private",
            "aws_route_table_association.production_private",
            "aws_s3_bucket.wazuh_assets",
            "aws_s3_object.wazuh_certs_generator",
            "aws_s3_object.wazuh_config_certs",
            "aws_s3_object.wazuh_dashboard_config",
            "aws_s3_object.wazuh_dashboard_wazuh_yml",
            "aws_s3_object.wazuh_docker_compose",
            "aws_s3_object.wazuh_indexer_config",
            "aws_s3_object.wazuh_indexer_users",
            "aws_s3_object.wazuh_manager_conf",
            "aws_security_group.victim_sg",
            "aws_security_group.wazuh_sg",
            "aws_subnet.management_private",
            "aws_subnet.nat_public",
            "aws_subnet.production_private",
            "aws_vpc.wazuh_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wazuh_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0826f7fac3eaaa32a",
            "arn": "arn:aws:ec2:eu-north-1:602664594292:instance/i-0ef98d4c10f39b085",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wazuh-instance-profile",
            "id": "i-0ef98d4c10f39b085",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed75846be5aabac5",
            "private_dns": "ip-10-0-1-73.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06acdd625ab12fbb8",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d511df95f2b19148",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-server",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-server",
              "Project": "cloud-soc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c23120336b8995d"
            ]
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.wazuh_instance_profile",
            "aws_iam_role.wazuh_ec2_role",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table_association.management_private",
            "aws_s3_bucket.wazuh_assets",
            "aws_s3_object.wazuh_certs_generator",
            "aws_s3_object.wazuh_config_certs",
            "aws_s3_object.wazuh_dashboard_config",
            "aws_s3_object.wazuh_dashboard_wazuh_yml",
            "aws_s3_object.wazuh_docker_compose",
            "aws_s3_object.wazuh_indexer_config",
            "aws_s3_object.wazuh_indexer_users",
            "aws_s3_object.wazuh_manager_conf",
            "aws_security_group.wazuh_sg",
            "aws_subnet.management_private",
            "aws_subnet.nat_public",
            "aws_vpc.wazuh_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:internet-gateway/igw-0188bd97c349aa870",
            "id": "igw-0188bd97c349aa870",
            "owner_id": "602664594292",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-igw",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-igw",
              "Project": "cloud-soc"
            },
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0201a7528f20bbe92",
            "association_id": "eipassoc-06f040b0d1dea5f98",
            "connectivity_type": "public",
            "id": "nat-04c053e481e0ab7fe",
            "network_interface_id": "eni-0ab1ec07feb473b0e",
            "private_ip": "10.0.3.216",
            "public_ip": "13.63.217.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068ae16035f6d703a",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-nat-gateway",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-nat-gateway",
              "Project": "cloud-soc"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.nat_public",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:route-table/rtb-08afacbaa35b88a9e",
            "id": "rtb-08afacbaa35b88a9e",
            "owner_id": "602664594292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04c053e481e0ab7fe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-private-rt",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-private-rt",
              "Project": "cloud-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.nat_public",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:route-table/rtb-048dbca992016f0eb",
            "id": "rtb-048dbca992016f0eb",
            "owner_id": "602664594292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0188bd97c349aa870",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-public-rt",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-public-rt",
              "Project": "cloud-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "management_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0426f6cd484e0eff3",
            "route_table_id": "rtb-08afacbaa35b88a9e",
            "subnet_id": "subnet-0d511df95f2b19148"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.management_private",
            "aws_subnet.nat_public",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d74a8fc672625f",
            "route_table_id": "rtb-048dbca992016f0eb",
            "subnet_id": "subnet-068ae16035f6d703a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.nat_public",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "production_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08999c3a3a90eea06",
            "route_table_id": "rtb-08afacbaa35b88a9e",
            "subnet_id": "subnet-0f258cd47c48b893e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.nat_public",
            "aws_subnet.production_private",
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jail_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:security-group/sg-0487853a86809e994",
            "description": "Jail security group for isolated instances",
            "egress": [],
            "id": "sg-0487853a86809e994",
            "ingress": [],
            "name": "jail-sg",
            "name_prefix": "",
            "owner_id": "602664594292",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "jail-sg",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "jail-sg",
              "Project": "cloud-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "victim_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:security-group/sg-0f3112fb4c4960b10",
            "description": "Victim instance security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3112fb4c4960b10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access for testing",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP app traffic from internal network",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "victim-sg",
            "name_prefix": "",
            "owner_id": "602664594292",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "victim-sg",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "victim-sg",
              "Project": "cloud-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wazuh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:security-group/sg-00c23120336b8995d",
            "description": "Wazuh Manager security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c23120336b8995d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from inside VPC A",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Wazuh agent registration from VPC A",
                "from_port": 55000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Wazuh agent syslog/TCP from VPC A",
                "from_port": 1514,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1514
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Wazuh cluster communication inside VPC A",
                "from_port": 1515,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1515
              }
            ],
            "name": "wazuh-sg",
            "name_prefix": "",
            "owner_id": "602664594292",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-sg",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-sg",
              "Project": "cloud-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:subnet/subnet-0d511df95f2b19148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d511df95f2b19148",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602664594292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-management-private-subnet",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-management-private-subnet",
              "Project": "cloud-soc"
            },
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:subnet/subnet-068ae16035f6d703a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068ae16035f6d703a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "602664594292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-nat-public-subnet",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-nat-public-subnet",
              "Project": "cloud-soc"
            },
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:subnet/subnet-0f258cd47c48b893e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f258cd47c48b893e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602664594292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-production-private-subnet",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-production-private-subnet",
              "Project": "cloud-soc"
            },
            "vpc_id": "vpc-00a3b88cfc3003620"
          },
          "dependencies": [
            "aws_vpc.wazuh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wazuh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:602664594292:vpc/vpc-00a3b88cfc3003620",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000c77a6ea655f4b7",
            "default_route_table_id": "rtb-046deef6c912a860b",
            "default_security_group_id": "sg-0d0f9fcd9fdddd7a8",
            "dhcp_options_id": "dopt-0134c723c3139d116",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a3b88cfc3003620",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046deef6c912a860b",
            "owner_id": "602664594292",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wazuh-vpc",
              "Project": "cloud-soc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wazuh-vpc",
              "Project": "cloud-soc"
            }
          }
        }
      ]
    }
  ]
}